--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
     </div>
   </div>
 </div>
-
+<h3>Downloads</h3>
+<ul>
+<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/documentation_orig.pdf">Documentation</a></li>
+<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/LR.pptx">presentation</a></li>
+<li><https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/srs_orig.pdf">software requirement specification</a></li>
+</ul>
 </body>
 </html>
