--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
     <div class="content">
-      <h1>Developing a Machine Learning Model</h1>
+      <h1>Landmark Recognition and retrieval</h1>
       <div class="date">by sreekanth kasani</div>
 
       <p>
@@ -73,15 +73,17 @@
 		<li>Regression problems use certain evaluation metrics such as mean squared error (MSE).</li>
 		<li>Classification problems use evaluation metrics as precision, accuracy and recall.</li>
 		</ul>
+	  
+	  	
+		<h3>Downloads</h3>
+		<ul>
+		<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/documentation_orig.pdf">Documentation</a></li>
+		<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/LR.pptx">presentation</a></li>
+		<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/srs_orig.pdf">software requirement specification</a></li>
+		</ul>
       </p>    
     </div>
   </div>
 </div>
-<h3>Downloads</h3>
-<ul>
-<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/documentation_orig.pdf">Documentation</a></li>
-<li><a href="https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/LR.pptx">presentation</a></li>
-<li><https://github.com/sreekanthkasani/sreekanthkasani.github.io/blob/master/srs_orig.pdf">software requirement specification</a></li>
-</ul>
 </body>
 </html>
